--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -12,20 +12,22 @@
 	</style>
 </head>
 <body>
-	<div class="customer">
+	<div class="application">
 		<div class="index-banner index-banner-top">
 			<div class="index-banner-box">
-				<div class="title">合作客户</div>
+				<div class="title">企业应用</div>
 			</div>
 		</div>
-		<div class="customer-list">
+		<div class="application-box">
 			<div class="inner">
-				<div class="inner-bigger-title text-center">
-					<p>多方共赢 长期发展</p>
-				</div>
-				<div class="inner-small-title text-center">服务上市公司29家和超千人企业83家</div>
-				<div class="customer-list-box">
-					<include file="public@customers" />
+				<div class="flex-box">
+					<div class="box-1">
+						<img src="__TMPL__/public/assets/style/imgs/application/1.png" />
+						<div class="flex-box">
+							<div class="name">雇工伞</div>
+							<div><a href="javascript:void(0)">点击访问</a></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
