--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -304,7 +304,7 @@
 										<div class="name" id="name"></div>
 										<div class="text" id="sex">性别：</div>
 										<div class="text" id="number">工号：</div>
-										<div class="text" id="status">状态：<img src="__TMPL__/public/assets/style/imgs/on_job.svg" /></div>
+										<div class="text" id="status">状态：</div>
 										<div class="text" id="phone">手机号：</div>
 									</div>
 								</div>
@@ -333,6 +333,7 @@
 				 $(".about-tabboxs .about-tabbox").eq(n).show();
 			})
 			
+
 			document.getElementById("searchBtn").onclick = function() {
 			    var content = document.getElementById("userName").value;
 			    $.ajax({
@@ -342,18 +343,21 @@
 			        dataType: "json",
 			        success: function (result) {
 			            console.log(result);//打印服务端返回的数据(调试用)
+
 			            if (result.code == 1) {
 			                //alert("提交成功")
 			                if(result.data!=null){
 			                    $("#name").html(result.data.name)
 			                    $("#sex").html("性别："+result.data.sex)
 			                    $("#phone").html("手机号："+result.data.phone)
-			                    $("#status").html(result.data.status)
+								if(result.data.status=='1'){
+									$("#status").html("状态："+"<img id='statusImg' src='__TMPL__/public/assets/style/imgs/on_job.svg' />"+"在职")
+								}else{
+									$("#status").html("状态："+"<img id='statusImg' src='__TMPL__/public/assets/style/imgs/off_job.svg' />"+"离职")
+								}
 			                    $("#number").html("工号："+result.data.number)
-								console.log('result.data.avatar',result.data.avatar)
-								let avatar=result.data.avatar.replace('portal/about','upload');
-								console.log('avatar',avatar)
-			                    $("#avatar").attr('src',avatar);
+								console.log(result.data.avatar);
+			                    $("#avatar").attr("src",result.data.avatar);
 			                }else {
 			                    alert("未查询到该员工！");
 			                }
