--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -28,6 +28,53 @@
 							<div><a href="javascript:void(0)">点击访问</a></div>
 						</div>
 					</div>
+					<div class="box-2">
+						<div class="flex-box">
+							<div class="left">
+								<img src="__TMPL__/public/assets/style/imgs/application/2.png" />
+								<div>华劳网</div>
+							</div>
+							<div class="right">
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
+									<div>APP</div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
+									<div>小程序</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="flex-box">
+					<div class="box-3">
+						<img src="__TMPL__/public/assets/style/imgs/application/3.png" />
+						<div class="flex-box">
+							<div class="name">CRM小程序</div>
+							<div><a href="javascript:void(0)">扫码访问</a></div>
+						</div>
+					</div>
+					<div class="box-2">
+						<div class="flex-box">
+							<div class="left">
+								<img src="__TMPL__/public/assets/style/imgs/application/4.png" />
+								<div>劳务派遣</div>
+							</div>
+							<div class="right">
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
+									<div>劳务派遣H5</div>
+									<a href="javascript:void(0)">劳务派遣管理系统</a>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
+									<div>德劳网H5</div>
+									<a href="javascript:void(0)">德劳网PC端</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
