--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -127,7 +127,7 @@
 							        <div class="swiper-slide year">2007</div>
 							    </div>
 							</div>
-							<div class="swiperControl visible-xs">
+							<div class="swiperControl" style="display: none;">
 							    <!-- Add Scrollbar -->
 							    <div class="swiper-scrollbar"></div>
 							    <!-- Swiper -->
@@ -246,6 +246,9 @@
 				 <p>再次感谢您已经给到的和即将给予我们的信任与支持，我们会更加不遗余力、更加时不我待、更加自强不息，以骄人的业绩诠释和实践“完善自我、服务客户、成就员工、回馈社会”的崇高企业使命，成功演绎一曲具有划时代意义的“学习、努力、成长，探索、创新、价值，感恩、分享、爱”的交响曲。</p></div>
 						</div>
 					</div>
+						<div class="visible-xs">
+							<img src="__TMPL__/public/assets/style/imgs/about/2.png" style="width: 100%;" />
+						</div>
 				</div>
 			</li>
 			<li class="about-tabbox">
