--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -55,7 +55,7 @@
 					<li data-url = "product"><p><a href="{:cmf_url('portal/Product/index')}" title="产品服务">产品服务</a></p></li>
 				    <li data-url = "solution"><p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p></li>
 				    <li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p></li>
-					<li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="合伙人计划">合伙人计划</a></p></li>
+					<li data-url = "news"><p><a href="{:cmf_url('portal/Partner/index')}" title="合伙人计划">合伙人计划</a></p></li>
 				    <li data-url = "about"><p><a href="{:cmf_url('portal/About/index')}" title="关于我们">关于我们</a></p></li>
 				    <li data-url = "contacts"><p><a href="{:cmf_url('portal/Contacts/index')}" title="联系我们">联系我们</a></p></li>
 				    <li data-url = "customer"><p><a href="{:cmf_url('portal/Customer/index')}" title="合作客户">合作客户</a></p></li>
@@ -102,8 +102,11 @@
 			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/Solution/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
 			</li>
-			 <li class="menu-splitL-li border-1px-rgba animate">
+			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
+			</li>
+			<li class="menu-splitL-li border-1px-rgba animate">
+				<a href="{:cmf_url('portal/Partner/index')}" class="menu-splitL-item" title="合伙人计划">合伙人计划</a>
 			</li>
 			<li class="menu-splitL-li border-1px-rgba animate">
 				<a href="{:cmf_url('portal/About/index')}" class="menu-splitL-item" title="关于我们">关于我们</a>
