--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -58,6 +58,7 @@
 			<img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
 		</div>
     </div>
+	<img class="product_img" src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
     <!-- 我们的优势 -->
     <div class="ouradvantage">
         <div class="ouradvantage_content">
