--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -168,6 +168,39 @@
 					</div>
 				</div>
 			</div>
+			<div class="item">
+				<div class="item_top">
+					15年
+				</div>
+				<div class="item_des">
+					深耕人力资源服务业
+				</div>
+			</div>
+			<div class="item">
+				<div class="item_top">
+					83家
+				</div>
+				<div class="item_des">
+					服务超千人企业
+					和上市公司83家
+				</div>
+			</div>
+			<div class="item">
+				<div class="item_top">
+					3000家
+				</div>
+				<div class="item_des">
+					服务客户3000余家
+				</div>
+			</div>
+			<div class="item">
+				<div class="item_top">
+					170+
+				</div>
+				<div class="item_des">
+					全国170+直营分/子公司
+				</div>
+			</div>
 		</div>
 	</div>
 	<!-- 解决方案 -->
@@ -194,6 +227,7 @@
 				</div>
 			</div>
 		</div>
+		<button class="resolve_btn">获取定制解决方案</button>
 	</div>
 	<!-- 客户信赖 -->
 	<div class="solution_customer">
