--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -32,26 +32,65 @@
 									<div class="text">邮箱：hualaohr@126.com</div>
 								</li>
 								<li>
-									<div class="title">山东中政服务外包有限公司</div>
-									<div class="text">地址：山东省济南市高新区经十路7000号汉峪金融商务中心三区5号楼36层3609房间</div>
+									<div class="title">山东金伞保险代理股份有限公司</div>
+									<div class="text">地址：山东省德州市经济技术开发区宋官屯街道办事处东风东路1888号康博公馆1号楼A单元18层1803号B室</div>
 									<div class="text">电话：0534-2668711</div>
-									<div class="text">邮箱：hualaohr@126.com</div>
+									<div class="text">邮箱：baoxian@hualao.cc</div>
+								</li>
+								<li>
+									<div class="title">山东中劳劳务分包有限公司</div>
+									<div class="text">地址：山东省德州市庆云县光明路985号庆云县有机农业发展中心213-7</div>
+									<div class="text">电话：18561148711</div>
+									<div class="text">邮箱：hualaorenli@126.com</div>
+								</li>
+								<li>
+									<div class="title">中洁清洁服务有限公司</div>
+									<div class="text">地址：中国北京人力资源产业园（通州园）</div>
+									<div class="text">电话：186 0111 8711</div>
+									<div class="text">邮箱：zhongjie@hualaogroup.com</div>
+								</li>
+								<li>
+									<div class="title">华劳人力资源有限公司</div>
+									<div class="text">地址：北京市通州区新华东街11号院1号楼2层2005室</div>
+									<div class="text">电话：400-8718711</div>
+									<div class="text">邮箱：hualao@hualaogroup.com</div>
+								</li>
+								<li>
+									<div class="title">中朗（北京）国际保安服务有限公司</div>
+									<div class="text">地址：北京市朝阳区霄云路32号2号楼7层745室</div>
+									<div class="text">电话：15313151059</div>
+									<div class="text">邮箱：hualao@hualaogroup.com</div>
 								</li>
 							</ul>
 						</div>
-						<div class="contact-part-box-right">
+						<div class="contact-part-box-right hidden-xs">
 							<div class="map" id="map"></div>
 						</div>
 					</div>
 				</div>
 				
 			</div>
-			<div class="contact-part">
+			<div class="contact-part contact-part2">
 				<div class="inner">
 					<div class="inner-bigger-title text-center">
 						<p>全国分支机构</p>
 					</div>
 					<div class="inner-small-title text-center">170+家直营分/子公司，覆盖全国各大城市</div>
+					<div class="tabs-part">
+						<ul class="tabs">
+							<li class="active">全部</li>
+							<li>东北地区</li>
+							<li>华北地区</li>
+							<li>华中地区</li>
+							<li>华东地区</li>
+							<li>华南地区</li>
+							<li>西北地区</li>
+							<li>西南地区</li>
+						</ul>
+						<div class="search-company">
+							<input class="company" id="company" placeholder="搜索分公司及分支机构" />
+						</div>
+					</div>
 					<div class="contact-part-box">
 						<div class="contact-part-box-left">
 							<ul>
@@ -75,7 +114,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="contact-part-box-right">
+						<div class="contact-part-box-right  hidden-xs">
 							<div class="map" id="map2"></div>
 						</div>
 					</div>
