--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -77,16 +77,18 @@
 					</div>
 					<div class="inner-small-title text-center">170+家直营分/子公司，覆盖全国各大城市</div>
 					<div class="tabs-part">
-						<ul class="tabs">
-							<li class="active">全部</li>
-							<li>东北地区</li>
-							<li>华北地区</li>
-							<li>华中地区</li>
-							<li>华东地区</li>
-							<li>华南地区</li>
-							<li>西北地区</li>
-							<li>西南地区</li>
-						</ul>
+						<div class="tabs-box">
+							<ul class="tabs">
+								<li class="active">全部</li>
+								<li>东北地区</li>
+								<li>华北地区</li>
+								<li>华中地区</li>
+								<li>华东地区</li>
+								<li>华南地区</li>
+								<li>西北地区</li>
+								<li>西南地区</li>
+							</ul>
+						</div>
 						<div class="search-company">
 							<input class="company" id="company" placeholder="搜索分公司及分支机构" />
 						</div>
