--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -230,19 +230,14 @@
 		<button class="resolve_btn">获取定制解决方案</button>
 	</div>
 	<!-- 客户信赖 -->
-	<div class="solution_customer">
-		<div class="title">1600+家企业的信赖</div>
-		<div class="tag">深耕人力资源服务业，为企业提供更优质的服务</div>
-		<div class="list">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-				<img src="__TMPL__/public/assets/style/imgs/solution/resolve3.png" alt="">
-		</div>
-		<div class="next">
-			查看所有客户案例
+	<div class="index-customer">
+		<div class="inner">
+			<div class="inner-bigger-title text-center">
+				<p>1600+家企业的信赖</p>
+			</div>
+			<div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
+			<include file="public@customers" />
+			<div class="more">查看所有客户案例</div>
 		</div>
 	</div>
 </div>
