--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -138,6 +138,15 @@
 							</div>
 							<div class="swiper-container boxSwiper">
 							    <div class="list swiper-wrapper">
+									<div class="swiper-slide time-line">
+										<ul class="history-box">
+											<li class="title"><div class="circular"></div><div>2022 占位</div></li>
+											<li class="name"><div class="circular"></div><div><span>11-17</span>上海华劳科技有限公司成立</div></li>
+											<li class="name"><div class="circular"></div><div><span>05-26</span>中朗（北京）国际保安服务有限公司投资控股</div></li>
+											<li class="name"><div class="circular"></div><div><span>05-18</span>山东华企科技服务有限公司成立</div></li>
+											<li class="name"><div class="circular"></div><div><span>04-26</span>华劳（北京）人力资源服务有限公司投资控股</div></li>
+										</ul>
+									</div>
 							        <div class="swiper-slide time-line">
 										<ul class="history-box">
 											<li class="title"><div class="circular"></div><div>2021</div></li>
