--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -19,43 +19,43 @@
 					<div class="contact-part-box">
 						<div class="contact-part-box-left">
 							<ul>
-								<li class="active">
+								<li class="active" data-lng="116.365035" data-lat="37.434357">
 									<div class="title">华劳集团总部</div>
 									<div class="text">地址：德州市经济技术开发区康博大厦1701室</div>
 									<div class="text">电话：400-8718711、0534-2228711</div>
 									<div class="text">邮箱：hualao@hualaogroup.com</div>
 								</li>
-								<li>
+								<li data-lng="117.146475" data-lat="36.656260">
 									<div class="title">山东中政服务外包有限公司</div>
 									<div class="text">地址：山东省济南市高新区经十路7000号汉峪金融商务中心三区5号楼36层3609房间</div>
 									<div class="text">电话：0534-2668711</div>
 									<div class="text">邮箱：hualaohr@126.com</div>
 								</li>
-								<li>
+								<li  data-lng="116.365035" data-lat="37.434357">
 									<div class="title">山东金伞保险代理股份有限公司</div>
 									<div class="text">地址：山东省德州市经济技术开发区宋官屯街道办事处东风东路1888号康博公馆1号楼A单元18层1803号B室</div>
 									<div class="text">电话：0534-2668711</div>
 									<div class="text">邮箱：baoxian@hualao.cc</div>
 								</li>
-								<li>
+								<li data-lng="117.385823" data-lat="37.775238">
 									<div class="title">山东中劳劳务分包有限公司</div>
 									<div class="text">地址：山东省德州市庆云县光明路985号庆云县有机农业发展中心213-7</div>
 									<div class="text">电话：18561148711</div>
 									<div class="text">邮箱：hualaorenli@126.com</div>
 								</li>
-								<li>
+								<li data-lng="116.666538" data-lat="39.908794">
 									<div class="title">中洁清洁服务有限公司</div>
 									<div class="text">地址：中国北京人力资源产业园（通州园）</div>
 									<div class="text">电话：186 0111 8711</div>
 									<div class="text">邮箱：zhongjie@hualaogroup.com</div>
 								</li>
-								<li>
+								<li data-lng="116.668261" data-lat="39.909045">
 									<div class="title">华劳人力资源有限公司</div>
 									<div class="text">地址：北京市通州区新华东街11号院1号楼2层2005室</div>
 									<div class="text">电话：400-8718711</div>
 									<div class="text">邮箱：hualao@hualaogroup.com</div>
 								</li>
-								<li>
+								<li data-lng="116.463953" data-lat="39.958742">
 									<div class="title">中朗（北京）国际保安服务有限公司</div>
 									<div class="text">地址：北京市朝阳区霄云路32号2号楼7层745室</div>
 									<div class="text">电话：15313151059</div>
@@ -133,18 +133,37 @@
 		<include file="public@footer"/>
 		<script type="text/javascript">
 		window.onload = function () {
-			var map = new AMap.Map(document.getElementById("map"));
+			 var map = new AMap.Map('map', {
+				 zoom: 18, //初始地图级别
+			      center: [116.365035, 37.434357], //初始地图中心点
+			    });
+			let position = [116.365035, 37.434357];
+			var marker = new AMap.Marker({
+			    icon: "https://webapi.amap.com/theme/v1.3/markers/n/mark_b.png",
+			    position: position,
+			    anchor:'bottom-center'
+			});
+			map.add(marker);
+			$(".contact-part-box .contact-part-box-left li").on("click",function(){
+				$(".contact-part-box .contact-part-box-left li").removeClass("active");
+				$(this).addClass("active");
+				if(marker){
+					map.remove(marker)
+				}
+				let lng = $(this).attr('data-lng');
+				let lat = $(this).attr('data-lat');
+				position[0] = lng;
+				position[1] = lat;
+				marker = new AMap.Marker({
+				    icon: "https://webapi.amap.com/theme/v1.3/markers/n/mark_b.png",
+				    position: position,
+				    anchor:'bottom-center'
+				});
+				map.setCenter(position); 
+				map.add(marker);
+			})
 		}
 		</script>
 	</body>
-	<style>
-		input::-webkit-input-placeholder {
-			/* placeholder颜色 */
-			color: rgba(18, 18, 18, 0.4);
-			/* placeholder字体大小 */
-			font-size: 14px;
-			position: relative;
-			/* left:20px; */
-		}
-	</style>
+	
 </html>
