--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -303,6 +303,9 @@
 									mapTwo.add(marker2);
 								}else{
 									$("#companyList").html('');
+									if(marker2){
+										mapTwo.remove(marker2);
+									}
 								}
 							}
 						},
